--- a/src/main/resources/Fxml/BookCard.fxml
+++ b/src/main/resources/Fxml/BookCard.fxml
@@ -8,22 +8,19 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="300.0" prefWidth="125.0" styleClass="book-card" stylesheets="@../Styles/Book.css"
-   xmlns="http://javafx.com/javafx/23.0.1"
-   xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.librarymanager.Controllers.BookCardController">
+<VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="300.0" prefWidth="125.0" styleClass="book-card" stylesheets="@../Styles/Book.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.librarymanager.Controllers.BookCardController">
    <children>
-      <ImageView fx:id="bookImage" fitWidth="200.0" styleClass="book-image">
+      <ImageView fx:id="bookImage" fitWidth="200.0" styleClass="book-image" >
          <image>
             <Image url="@../Images/book1.jpg" />
-         </image>
-      </ImageView>
-      <VBox alignment="CENTER_LEFT" spacing="4.0">
+         </image></ImageView>
+      <VBox alignment="CENTER_LEFT" spacing="4.0" >
          <children>
             <Label fx:id="bookTitle" styleClass="book-title" text="Book Title" />
             <Label fx:id="bookAuthor" styleClass="book-author" text="Author Name" textAlignment="JUSTIFY">
-               <!--               <padding>-->
-               <!--                  <Insets bottom="10.0" />-->
-               <!--               </padding>-->
+<!--               <padding>-->
+<!--                  <Insets bottom="10.0" />-->
+<!--               </padding>-->
             </Label>
             <Button fx:id="booksDetailsButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="book-button" text="More">
                <graphic>
@@ -39,7 +36,7 @@
             
             <Button fx:id="deleteBookButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="book-button" text="Delete">
                <graphic>
-                  <FontAwesomeIconView fill="RED" glyphName="TRASH" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
                </graphic>
             </Button>
          </children>
